# python-project-51

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  python-publish.yml
page_loader/: __init__.py  loader.py  loader_logs.py  resource_loader.py
page_loader/scripts/: main.py
tests/: test_page_loader.py
tests/fixtures/: correct_page.html  page.html  resources_urls.json
tmp/: site-com.html
tmp/site-com_files/: getbootstrap-com--docs-4.5
