[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["dmedvedev <d.medvedev@velvetech.dev>"]
readme = "README.md"
packages = [{include = "page_loader"}]


[tool.poetry.scripts]
page_loader = "page_loader.scripts.main:main"


[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
requests-mock = "^1.10.0"
beautifulsoup4 = "^4.11.1"
validators = "^0.20.0"
progress = "^1.6"
pyparsing = "^3.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
